Fix z-index.

--- a/resources/sass/banner.scss
+++ b/resources/sass/banner.scss
@@ -1,8 +1,8 @@
 .popup-banner{
   position: fixed;
-  z-index: 3;
+  z-index: 20;
   background: rgba(0, 0, 0, 0.8);
-  top:0px;
+  top:0;
   width: 100%;
   height: 100%;
   text-align: center;
